<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.bus_reservation.Faqscreen">

    <ScrollView
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="FAQ"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/calibri"
        />

    <TextView
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head1"
        android:fontFamily="@font/gotham"
        android:textStyle="bold"
        />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/para1"
            android:fontFamily="@font/gotham"
            />

        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/head2"
            android:fontFamily="@font/gotham"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/para2"
            android:fontFamily="@font/gotham"
            />

        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/head3"
            android:fontFamily="@font/gotham"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/para3"
            android:fontFamily="@font/gotham"
            />

        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/head4"
            android:fontFamily="@font/gotham"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/para4"
            android:fontFamily="@font/gotham"
            />

        <TextView
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/head5"
            android:fontFamily="@font/gotham"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/para5"
            android:fontFamily="@font/gotham"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            />

    </LinearLayout>
    </ScrollView>
</FrameLayout>